# shelly_wifi_relay_module_ros

./: CMakeLists.txt  README.md  package.xml  setup.py
scripts/: shelly_relay_client.py  shelly_relay_server.py
