<?xml version="1.0"?>
<package format="2">
  <name>shelly_wifi_relay_module_ros1</name>
  <version>0.0.1</version>
  <description>A package to control Shelly 1PM devices</description>
  <maintainer email="keerthi.sagar@imr.ie">KeerthiSagarSN</maintainer>
  <license>Apache</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_srvs</depend>

  <exec_depend>python-requests</exec_depend>

  <test_depend>rostest</test_depend>
</package>
